syntax = "proto3";

option csharp_namespace = "Synapse";

package runrevit;

// The greeting service definition.
service RevitRunner {
  // Sends a greeting
  rpc DoRevit (SynapseRequest) returns (SynapseOutput);
}

message SynapseRequest {
  string method_id = 1;
  string method_input_json = 2;
}

message SynapseOutput {
  string method_output_json = 1;
}